codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__cyber_policy_error_event_snapshot.snap
---
source: tui/src/history_cell.rs
assertion_line: 3305
expression: rendered
---
ⓘ The provider requested an additional safety review
  If this seems wrong, try rephrasing the request or adjust the active
  provider's safety policy.
