codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__web_fetch_history_cell_failed_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
• Failed to fetch http://127.0.0.1:8080
  └ Web fetch failed: refusing to fetch private address
        `127.0.0.1`
