codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__web_fetch_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
• Fetched
  https://example.com/a/very/long/path/that/exercises/wrapping
  └ completed in 42ms
